--- a/Lesson_1_script.ipynb
+++ b/Lesson_1_script.ipynb
@@ -667,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 85,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -686,22 +686,7 @@
       "Learning rate = 0.043        \n",
       "Initial weights = [1.  0.5] \n",
       "\n",
-      "Iteration #0: W_new = [ 5.644 16.711], MSE = 3047.75\n",
-      "Iteration #10: W_new = [17.96536518  8.73283178], MSE = 418.64\n",
-      "Iteration #20: W_new = [26.89892949  7.10619123], MSE = 212.3\n",
-      "Iteration #30: W_new = [32.8877421   6.02020464], MSE = 119.6\n",
-      "Iteration #40: W_new = [36.90195036  5.29228986], MSE = 77.95\n",
-      "Iteration #50: W_new = [39.59261132  4.80437998], MSE = 59.23\n",
-      "Iteration #60: W_new = [41.39611924  4.47734162], MSE = 50.83\n",
-      "Iteration #70: W_new = [42.60498237  4.25813293], MSE = 47.05\n",
-      "Iteration #80: W_new = [43.4152644   4.11120078], MSE = 45.35\n",
-      "Iteration #90: W_new = [43.95838376  4.01271446], MSE = 44.59\n",
-      "Iteration #100: W_new = [44.32242817  3.94670062], MSE = 44.25\n",
-      "Iteration #110: W_new = [44.56644144  3.90245257], MSE = 44.09\n",
-      "Iteration #120: W_new = [44.72999971  3.8727938 ], MSE = 44.03\n",
-      "Iteration #130: W_new = [44.83963026  3.85291399], MSE = 43.99\n",
-      "Iteration #140: W_new = [44.9131139   3.83958887], MSE = 43.98\n",
-      "Iteration #149: W_new = [44.95828185  3.83139835], MSE = 43.97\n"
+      "Iteration #149: W_new = [1.  0.5], MSE = 43.97\n"
      ]
     }
    ],
@@ -713,16 +698,17 @@
     "       \\nLearning rate = {alpha} \\\n",
     "       \\nInitial weights = {W} \\n')\n",
     "\n",
-    "for i in range(150):\n",
+    "stop_dif = 0\n",
+    "\n",
+    "while stop_dif <= 0.01 and stop_dif != 0:\n",
     "    y_pred = np.dot(W, X)\n",
+    "    stop_dif = err - stop_dif\n",
     "    err = calc_mse(y, y_pred)\n",
     "#     for k in range(W.shape[0]):\n",
     "#         W[k] -= alpha * (1/n * 2 * np.sum(X[k] * (y_pred - y)))\n",
     "    W -= alpha * (1/n * 2 * np.dot(X, (y_pred - y)))\n",
     "    \n",
     "    W_pred = W\n",
-    "    if i % 10 == 0:\n",
-    "        print(f'Iteration #{i}: W_new = {W}, MSE = {round(err,2)}')\n",
     "        \n",
     "print(f'Iteration #{i}: W_new = {W}, MSE = {round(err,2)}')"
    ]
@@ -730,9 +716,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
